--- a/inpainting_deepImagePrior.ipynb
+++ b/inpainting_deepImagePrior.ipynb
@@ -1091,21 +1091,11 @@
    },
    "outputs": [],
    "source": [
-    "## Fig 6\n",
-    "# img_path  = 'data/inpainting/vase.png'\n",
-    "# mask_path = 'data/inpainting/vase_mask.png'\n",
     "\n",
-    "## Fig 8\n",
-    "# img_path  = 'data/inpainting/library.png'\n",
-    "# mask_path = 'data/inpainting/library_mask.png'\n",
-    "\n",
-    "## Fig 7 (top)\n",
     "img_path  = '/home/fmerizzi/Documents/image_inpainting/detail2.png'\n",
     "mask_path = '/home/fmerizzi/Documents/image_inpainting/detail2_mask.png'\n",
     "\n",
-    "# Another text inpainting example\n",
-    "# img_path  = 'data/inpainting/peppers.png'\n",
-    "# mask_path = 'data/inpainting/peppers_mask.png'\n",
+    "restoration_type = \"big holes\"\n",
     "\n",
     "NET_TYPE = 'skip_depth4' # one of skip_depth4|skip_depth2|UNET|ResNet"
    ]
@@ -1226,7 +1216,7 @@
    },
    "outputs": [],
    "source": [
-    "if 'vase.png' in img_path:\n",
+    "if 'vanilla' in restoration_type:\n",
     "    INPUT = 'meshgrid'\n",
     "    input_depth = 2\n",
     "    LR = 0.01 \n",
@@ -1243,7 +1233,7 @@
     "               upsample_mode='nearest', filter_skip_size=1, filter_size_up=3, filter_size_down=3,\n",
     "               need_sigmoid=True, need_bias=True, pad=pad, act_fun='LeakyReLU').type(dtype)\n",
     "    \n",
-    "elif ('detail' in img_path) or ('peppers.png' in img_path):\n",
+    "elif ('detail' in restoration_type) or ('big holes' in restoration_type):\n",
     "    # Same params and net as in super-resolution and denoising\n",
     "    INPUT = 'noise'\n",
     "    input_depth = 32\n",
@@ -1262,7 +1252,7 @@
     "               upsample_mode='nearest', filter_skip_size=1,\n",
     "               need_sigmoid=True, need_bias=True, pad=pad, act_fun='LeakyReLU').type(dtype)\n",
     "    \n",
-    "elif 'ss' in img_path:\n",
+    "elif 'architectures' in restoration_type:\n",
     "    \n",
     "    INPUT = 'noise'\n",
     "    input_depth = 1\n",
@@ -1599,7 +1589,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1613,7 +1603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
